# pauvre

./: BaseImage  Dockerfile  LICENSE  README.md  package.yaml  pauvre.cabal  stack.yaml
app/: Main.hs
src/: Api.hs  Config.hs  Logging.hs  Model.hs  Types.hs
src/.stack-work/intero/: intero24419tI.hs
src/Api/: Building.hs  Common.hs  Region.hs  Tenant.hs
src/Model/: Building.hs  Region.hs  Tenant.hs
