name:                pauvre
version:             0.0.0.0
synopsis:            Playground for minimal docker images with Alpine, Servant, and Persistent
description:         Please see README.md
homepage:            https://github.com/jkachmar/pauvre
license:             MIT
license-file:        LICENSE
author:              Joe Kachmar
copyright:           2016 Joe Kachmar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base                  >= 4.7 && < 5

executable pauvre
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , pauvre

source-repository head
  type:     git
  location: https://github.com/jkachmar/pauvre
