name:                pauvre
version:             0.0.0.0
synopsis:            Playground for minimal docker images with Alpine, Servant, and Persistent
description:         Please see README.md
homepage:            https://github.com/jkachmar/pauvre
license:             MIT
license-file:        LICENSE
author:              Joe Kachmar
copyright:           2016 Joe Kachmar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  other-modules:       Api.Building
                     , Model
  exposed-modules:     Api
                     , Config
  build-depends:       base                  >= 4.7 && < 5
                     , aeson                 >= 1.0
                     , bytestring            >= 0.10
                     , monad-logger          >= 0.3
                     , mtl                   >= 2.2
                     , persistent            >= 2.6
                     , persistent-postgresql >= 2.6
                     , persistent-template   >= 2.5
                     , servant               >= 0.9
                     , servant-docs          >= 0.9
                     , servant-server        >= 0.9
                     , text                  >= 1.2
                     , time                  >= 1.6
                     , transformers          >= 0.5
                     , wai                   >= 3.2
                     , wai-extra             >= 3.0

executable pauvre
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , pauvre
                     , safe                  >= 0.3
                     , warp                  >= 3.2

source-repository head
  type:     git
  location: https://github.com/jkachmar/pauvre
